# lindyndns

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.cargo/: config
.travis/: build.sh  package.sh  test.sh
ci/: build.sh  package.sh  test.sh
packaging/: config.toml
packaging/linux/: lindyndns.service  lindyndns.timer
packaging/linux/arch/: PKGBUILD
packaging/macos/: ca.johnramsden.lindyndns.plist  install.sh
packaging/macos/munkipkg/lindyndns/: build-info.yaml
packaging/windows/chocolatey/lindyndns/: lindyndns.nuspec
packaging/windows/chocolatey/lindyndns/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/windows/nsis/: createtask.ps1  default.nsh  dialog.nsh  installer_i686.nsi  installer_x86_64.nsi  removetask.ps1  taskwrapper.bat  uninstall.nsh
packaging/windows/wix/: lindyndns.wxs
src/: lib.rs  main.rs
src/linode/: client.rs
