[package]
name = "lindyndns"
version = "0.0.0"
license = "MIT"
authors = ["John Ramsden <johnramsden@riseup.net>"]
edition = "2018"

[dependencies]
reqwest = "^0.9"
clap = "^2.33"
serde_derive = "^1.0"
toml = "^0.5"
serde = "^1.0"
http = "^0.1"
serde_json = "^1.0"
#
#[profile.release]
#lto = true
#codegen-units = 1